--- a/wp-content/plugins/ghes-vlp/css/purchase.css
+++ b/wp-content/plugins/ghes-vlp/css/purchase.css
@@ -2,18 +2,21 @@
     list-style: none;
 }
 .address-section {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    column-gap: 5px;
+
 }
 .credit-card-section {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    column-gap: 5px;
+
 }
 .purchase-vll-billing div {
     margin-bottom: 5px;
 }
-.purchase-vll-billing input {
-    float: right;
+.purchase-vll-billing {
+    display: none;
+}
+.purchase-vll-billing .three-column {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+.purchase-vll-billing .flex-area {
+    display: flex;
 }
