--- a/wp-content/plugins/ghes-vlp/views/templates/purchase-billing.html
+++ b/wp-content/plugins/ghes-vlp/views/templates/purchase-billing.html
@@ -1,54 +1,74 @@
-<h3>Billing Information</h3>
-<div class="purchase-vll-billing">
-    <div>
-        <label for="name">Name</label>
-        <input type="text" name="name" id="vlp-bill-name" autocomplete="name">
+<form class="purchase-vll-billing">
+    <h3>Billing Information</h3>
+    <div class="three-column">
+        <div>
+            <label for="name">Name</label><br />
+            <input type="text" required="required" class="k-textbox" placeholder="John Smith" name="name"
+                id="vlp-bill-name" autocomplete="name" validationMessage="Name is Required">
+        </div>
+        <div>
+            <label for="telephone">Telephone</label><br />
+            <input type="text" data-role='maskedtextbox' data-mask="(999) 000-0000" id="vlp-bill-telephone"
+                name="telephone" data-validmask-msg="Phone number is incomplete" required="required" validationMessage="Telephone is Required" />
+            <span data-for='telephone' class='k-invalid-msg'></span>
+        </div>
     </div>
     <div class="address-section">
         <div>
-            <label for="billingAddress">Billing Address</label>
-            <input type="text" name="billingAddress" id="vlp-bill-billingAddress" autocomplete="street-address">
+            <label for="billingAddress">Billing Address</label><br />
+            <input type="text" required="required" class="k-textbox" placeholder="Your Billing Address"
+                name="billingAddress" id="vlp-bill-billingAddress" autocomplete="street-address" validationMessage="Billing Address is Required">
         </div>
-        <div>
-            <label for="city">City</label>
-            <input type="text" name="city" id="vlp-bill-city" autocomplete="address-level2">
-        </div>
-        <div>
-            <label for="state">State</label>
-            <input type="text" name="state" id="vlp-bill-state" autocomplete="address-level1">
-        </div>
-        <div>
-            <label for="zipcode">Zip Code</label>
-            <input type="text" name="zipcode" id="vlp-bill-zipcode" autocomplete="postal-code">
+        <div class="three-column">
+            <div>
+                <label for="city">City</label><br />
+                <input type="text" required="required" class="k-textbox" placeholder="City" name="city"
+                    id="vlp-bill-city" autocomplete="address-level2" validationMessage="City is Required">
+            </div>
+            <div>
+                <label for="state">State</label><br />
+                <input type="text" required="required" class="k-textbox" placeholder="State" name="state"
+                    id="vlp-bill-state" autocomplete="address-level1" validationMessage="State is Required">
+            </div>
+            <div>
+                <label for="zipcode">Zip Code</label><br />
+                <input type="text" required="required" class="k-textbox" placeholder="Zip Code" name="zipcode"
+                    id="vlp-bill-zipcode" autocomplete="postal-code" validationMessage="Zip Code is Required">
+            </div>
         </div>
     </div>
-    <div>
-        <label for="telephone">Telephone</label>
-        <input type="tel" name="telephone" id="vlp-bill-telephone" autocomplete="tel-national">
-    </div>
+    <hr>
     <div class="credit-card-section">
         <div>
-            <label for="nameCard">Name on Credit Card</label>
-            <input type="text" name="nameCard" id="vlp-bill-nameCard" autocomplete="cc-name">
+            <label for="nameCard">Name on Credit Card</label><br />
+            <input type="text" required="required" class="k-textbox" placeholder="John Smith" name="nameCard"
+                id="vlp-bill-nameCard" autocomplete="cc-name" validationMessage="Credit Card Name is Required">
         </div>
         <div>
-            <label for="ccNumber">Credit Card Number</label>
-            <input type="text" name="ccNumber" id="vlp-bill-ccNumber" autocomplete="cc-number">
+            <label for="ccNumber">Credit Card Number</label><br />
+            <input type="text" required="required" data-role='maskedtextbox' data-mask="0000 0000 0000 0000"
+                name="ccNumber" id="vlp-bill-ccNumber" autocomplete="cc-number"
+                data-validmask-msg="Credit Card Number is incomplete" validationMessage="Credit Card Number is Required">
+            <span data-for='ccNumber' class='k-invalid-msg'></span>
         </div>
-        <div>
-            <label for="ccExpMonth">Expiration Month</label>
-            <input type="text" pattern="^[0-9]{2}$" minlength="2" maxlength="2" size="2" name="ccExpMonth"
-                id="vlp-bill-ccExpMonth" autocomplete="cc-exp-month">
-        </div>
-        <div>
-            <label for="ccExpYear">Expiration Year</label>
-            <input type="text" pattern="\d{4}" minlength="4" maxlength="4" size="4" name="ccExpYear"
-                id="vlp-bill-ccExpYear" autocomplete="cc-exp-year"><br />
-        </div>
-        <div>
-            <label for="ccCSV">Code</label>
-            <input type="text" pattern="\d{3}|\d{4}" name="ccCSV" id="vlp-bill-ccCSV" autocomplete="cc-csc">
+        <div class="flex-area">
+            <div>
+                <label for="ccExpMonth">Expiration Month</label><br />
+                <input type="text" required="required" class="k-textbox" placeholder="01" pattern="^[0-9]{2}$"
+                    minlength="2" maxlength="2" name="ccExpMonth" id="vlp-bill-ccExpMonth" autocomplete="cc-exp-month" validationMessage="Expiration Month is Required">
+            </div>
+            <div>
+                <label for="ccExpYear">Expiration Year</label><br />
+                <input type="text" required="required" class="k-textbox" placeholder="2022" pattern="\d{4}" minlength="4"
+                    maxlength="4" name="ccExpYear" id="vlp-bill-ccExpYear" autocomplete="cc-exp-year" validationMessage="Expiration Year is Required"><br />
+            </div>
+            <div>
+                <label for="ccCSV">Code</label><br />
+                <input type="text" required="required" class="k-textbox" placeholder="123" pattern="\d{3}|\d{4}"
+                    name="ccCSV" id="vlp-bill-ccCSV" autocomplete="cc-csc" validationMessage="Security Code is Required">
+            </div>
         </div>
     </div>
-    <button onclick="purchaseSubscription()">Purchase</button>
-</div>
+    <h3 class="total-due">Total Due: $0.00</h3><br />
+    <button class="k-button" type="submit">Purchase</button>
+</form>
