--- a/wp-content/plugins/ghes-vlp/views/templates/purchase-billing.html
+++ b/wp-content/plugins/ghes-vlp/views/templates/purchase-billing.html
@@ -44,7 +44,7 @@
             <div>
                 <label for="zipcode">Zip Code</label><br />
                 <input type="text" required="required" class="k-textbox" placeholder="Zip Code" name="zipcode"
-                    id="vlp-bill-Zip" autocomplete="postal-code" validationMessage="Zip Code is Required">
+                    id="vlp-bill-Zip" autocomplete="postal-code" validationMessage="Zip Code is Required" maxlength="5">
             </div>
         </div>
     </div>
