charge/refund working

--- a/wp-content/plugins/ghes-vlp/views/templates/monthly-cancel-message.html
+++ b/wp-content/plugins/ghes-vlp/views/templates/monthly-cancel-message.html
@@ -2,4 +2,4 @@
 <p>
     If you cancel your subscription now, the current month (if paid) will not be reunded. You will keep your access until the end of this month's billing period.
 </p>
-<button onClick="cancelSubscription()">Yes</button><button onClick="closeCancelDialog()">Cancel</button>
+<button class="confirm" onClick="cancelSubscription()">Yes</button><button class="cancel" onClick="closeCancelDialog()">Cancel</button>
