--- a/wp-content/plugins/ghes-vlp/views/templates/yearly-cancel-message.html
+++ b/wp-content/plugins/ghes-vlp/views/templates/yearly-cancel-message.html
@@ -2,4 +2,4 @@
 <p>
     You will recieve a pro-rated refund based on how many days are remaining in the year you have already paid. 
 </p>
-<button onClick="cancelSubscription()">Yes</button><button onClick="closeCancelDialog()">Cancel</button>
+<button class="confirm" onClick="cancelSubscription()">Yes</button><button class="cancel" onClick="closeCancelDialog()">Cancel</button>
