--- a/wp-content/plugins/ghes-vlp/css/purchase.css
+++ b/wp-content/plugins/ghes-vlp/css/purchase.css
@@ -23,11 +23,14 @@
     display: flex;
 }
 
-.successful-payment {
+.successful-payment, .successful-refund {
     margin-bottom: 40px;
     font-weight: 700;
     display: none;
 }
 .k-window {
     overflow-y: initial;
+}
+.k-window .cancel {
+    float: right;
 }
