--- a/wp-content/plugins/ghes-vlp/views/templates/purchase-billing.html
+++ b/wp-content/plugins/ghes-vlp/views/templates/purchase-billing.html
@@ -14,13 +14,14 @@
         <div>
             <label for="telephone">Telephone</label><br />
             <input type="text" data-role='maskedtextbox' data-mask="(999) 000-0000" id="vlp-bill-PhoneNumber"
-                name="telephone" data-validmask-msg="Phone number is incomplete" required="required" validationMessage="Telephone is Required" />
+                name="telephone" data-validmask-msg="Phone number is incomplete" required="required"
+                validationMessage="Telephone is Required" />
             <span data-for='telephone' class='k-invalid-msg'></span>
         </div>
         <div>
             <label for="email">Email</label><br />
-            <input type="text" data-role='maskedtextbox' id="vlp-bill-Email"
-                name="email" required="required" validationMessage="Email is Required" />
+            <input type="text" data-role='maskedtextbox' id="vlp-bill-Email" name="email" required="required"
+                validationMessage="Email is Required" />
             <span data-for='email' class='k-invalid-msg'></span>
         </div>
     </div>
@@ -28,7 +29,8 @@
         <div>
             <label for="billingAddress">Billing Address</label><br />
             <input type="text" required="required" class="k-textbox" placeholder="Your Billing Address"
-                name="billingAddress" id="vlp-bill-Address" autocomplete="street-address" validationMessage="Billing Address is Required">
+                name="billingAddress" id="vlp-bill-Address" autocomplete="street-address"
+                validationMessage="Billing Address is Required">
         </div>
         <div class="three-column">
             <div>
@@ -49,32 +51,85 @@
         </div>
     </div>
     <hr>
+    <span class="form-header small-header">Select Payment Type</span>
+    <div id="payment-type" class="payment-type">
+        <span class="k-invalid-msg" data-for="payment-select"></span>
+        <div class="cc-select">
+            <input type="radio" required name="payment-select" value="cc" id="credit-card-select"
+                validationMessage="You Must Select a Payment Type" /><span class="cc-radio"></span><label
+                for="credit-card-select">&nbsp;Credit
+                Card</label>
+        </div>
+        <div class="ach-select">
+            <input type="radio" required name="payment-select" value="ach" id="ach-select" /><span
+                class="ach-radio"></span><label for="ach-select">&nbsp;Bank Account (ACH)</label>
+        </div>
+    </div>
+    <hr>
     <div class="credit-card-section">
+        <span class="form-header small-header">Credit Card Information</span>
         <div>
             <label for="ccNumber">Credit Card Number</label><br />
+            <span style="font-size:.8em;">(Visa & Mastercard only)</span><br />
             <input type="text" required="required" data-role='maskedtextbox' data-mask="0000 0000 0000 0000"
                 name="ccNumber" id="vlp-bill-CardNumber" autocomplete="cc-number"
-                data-validmask-msg="Credit Card Number is incomplete" validationMessage="Credit Card Number is Required">
+                data-validmask-msg="Credit Card Number is incomplete"
+                validationMessage="Credit Card Number is Required">
             <span data-for='ccNumber' class='k-invalid-msg'></span>
         </div>
-        <div class="flex-area">
+        <div class="three-column">
             <div>
                 <label for="ccExpMonth">Expiration Month</label><br />
                 <input type="text" required="required" class="k-textbox" placeholder="01" pattern="^[0-9]{2}$"
-                    minlength="2" maxlength="2" name="ccExpMonth" id="vlp-bill-ExpirationMonth" autocomplete="cc-exp-month" validationMessage="Expiration Month is Required">
+                    minlength="2" maxlength="2" name="ccExpMonth" id="vlp-bill-ExpirationMonth"
+                    autocomplete="cc-exp-month" validationMessage="Expiration Month is Required">
             </div>
             <div>
                 <label for="ccExpYear">Expiration Year</label><br />
-                <input type="text" required="required" class="k-textbox" placeholder="2022" pattern="\d{4}" minlength="4"
-                    maxlength="4" name="ccExpYear" id="vlp-bill-ExpirationYear" autocomplete="cc-exp-year" validationMessage="Expiration Year is Required"><br />
+                <input type="text" required="required" class="k-textbox" placeholder="2022" pattern="\d{4}"
+                    minlength="4" maxlength="4" name="ccExpYear" id="vlp-bill-ExpirationYear" autocomplete="cc-exp-year"
+                    validationMessage="Expiration Year is Required"><br />
             </div>
             <div>
                 <label for="ccCSV">Code</label><br />
                 <input type="text" required="required" class="k-textbox" placeholder="123" pattern="\d{3}|\d{4}"
-                    name="ccCSV" id="vlp-bill-CardCode" autocomplete="cc-csc" validationMessage="Security Code is Required">
+                    name="ccCSV" id="vlp-bill-CardCode" autocomplete="cc-csc"
+                    validationMessage="Security Code is Required">
             </div>
         </div>
     </div>
+    <div class="ach-section">
+        <span class="form-header small-header">Bank Account Information (ACH)</span>
+        <div class="ach three-column">
+            <div>
+                <label>Bank Name</label><input class="bankname k-textbox" validationMessage="Bank Name is Required"
+                    type="textbox" required id="vlp-bill-BankName" name="BankName" />
+            </div>
+            <div>
+                <label>Name on Account</label><input class="k-textbox" validationMessage="Name on Account is Required"
+                    type="textbox" required id="vlp-bill-NameOnAccount" name="NameOnAccount" />
+            </div>
+            <div>
+                <label>Account Type</label><br/>
+                <span class="k-invalid-msg" data-for="AccountType"></span>
+                <input type="radio" required id="vlp-bill-Checking" name="AccountType" value="checking" validationMessage="Account Type is Required" class="k-radio" />
+                <label class="k-radio-label" for="vlp-bill-Checking">Checking</label><br/>
+                <input type="radio" required id="vlp-bill-Savings" name="AccountType" value="savings" class="k-radio"  />
+                <label class="k-radio-label" for="vlp-bill-Savings">Savings</label>
+            </div>
+            <div>
+                <label>Account Number</label><input class="k-textbox" maxlength="155"
+                    validationMessage="Account Number is Required" type="textbox" required id="vlp-bill-AccountNumber"
+                    name="AccountNumber" />
+            </div>
+            <div>
+                <label>Routing Number</label><input class="k-textbox" maxlength="155"
+                    validationMessage="Routing Number is Required" type="textbox" required id="vlp-bill-RoutingNumber"
+                    name="RoutingNumber" />
+            </div>
+        </div>
+    </div>
+
     <h3 class="total-due">Total Due: $0.00</h3><br />
-    <button class="k-button" type="submit">Purchase</button>
+    <button class="k-button" id="purchasesubscription" type="submit">Purchase</button>
 </form>
