--- a/wp-content/plugins/ghes-vlp/views/templates/purchase-billing.html
+++ b/wp-content/plugins/ghes-vlp/views/templates/purchase-billing.html
@@ -3,24 +3,24 @@
     <div class="three-column">
         <div>
             <label for="fname">First Name</label><br />
-            <input type="text" required="required" class="k-textbox" placeholder="John" name="fname"
+            <input required class="k-textbox" placeholder="John" name="fname"
                 id="vlp-bill-FirstName" autocomplete="given-name" validationMessage="First Name is Required">
         </div>
         <div>
             <label for="lname">Last Name</label><br />
-            <input type="text" required="required" class="k-textbox" placeholder="Smith" name="lname"
+            <input required class="k-textbox" placeholder="Smith" name="lname"
                 id="vlp-bill-LastName" autocomplete="family-name" validationMessage="Last Name is Required">
         </div>
         <div>
             <label for="telephone">Telephone</label><br />
-            <input type="text" data-role='maskedtextbox' data-mask="(999) 000-0000" id="vlp-bill-PhoneNumber"
-                name="telephone" data-validmask-msg="Phone number is incomplete" required="required"
-                validationMessage="Telephone is Required" />
+            <input id="vlp-bill-PhoneNumber"
+                name="telephone" data-validmask-msg="Phone number is incomplete" required
+                validationMessage="Telephone is Required" class="phone-number" />
             <span data-for='telephone' class='k-invalid-msg'></span>
         </div>
         <div>
             <label for="email">Email</label><br />
-            <input type="text" data-role='maskedtextbox' id="vlp-bill-Email" name="email" required="required"
+            <input type="email" data-role='maskedtextbox' id="vlp-bill-Email" name="email" required
                 validationMessage="Email is Required" />
             <span data-for='email' class='k-invalid-msg'></span>
         </div>
@@ -28,24 +28,24 @@
     <div class="address-section">
         <div>
             <label for="billingAddress">Billing Address</label><br />
-            <input type="text" required="required" class="k-textbox" placeholder="Your Billing Address"
-                name="billingAddress" id="vlp-bill-Address" autocomplete="street-address"
+            <input required class="k-textbox" placeholder="Your Billing Address"
+                name="billingAddress" id="vlp-bill-Address" autocomplete="address-line1"
                 validationMessage="Billing Address is Required">
         </div>
         <div class="three-column">
             <div>
                 <label for="city">City</label><br />
-                <input type="text" required="required" class="k-textbox" placeholder="City" name="city"
+                <input required class="k-textbox" placeholder="City" name="city"
                     id="vlp-bill-City" autocomplete="address-level2" validationMessage="City is Required">
             </div>
             <div>
                 <label for="state">State</label><br />
-                <input type="text" required="required" class="k-textbox" placeholder="State" name="state"
+                <input required class="k-textbox" placeholder="State" name="state"
                     id="vlp-bill-State" autocomplete="address-level1" validationMessage="State is Required">
             </div>
             <div>
                 <label for="zipcode">Zip Code</label><br />
-                <input type="text" required="required" class="k-textbox" placeholder="Zip Code" name="zipcode"
+                <input required class="k-textbox" placeholder="Zip Code" name="zipcode"
                     id="vlp-bill-Zip" autocomplete="postal-code" validationMessage="Zip Code is Required" maxlength="5">
             </div>
         </div>
@@ -56,13 +56,13 @@
         <span class="k-invalid-msg" data-for="payment-select"></span>
         <div class="cc-select">
             <input type="radio" required name="payment-select" value="cc" id="credit-card-select"
-                validationMessage="You Must Select a Payment Type" /><span class="cc-radio"></span><label
-                for="credit-card-select">&nbsp;Credit
-                Card</label>
+                validationMessage="You Must Select a Payment Type" class="k-radio" />
+            <label for="credit-card-select">&nbsp;Credit Card</label>
         </div>
         <div class="ach-select">
-            <input type="radio" required name="payment-select" value="ach" id="ach-select" /><span
-                class="ach-radio"></span><label for="ach-select">&nbsp;Bank Account (ACH)</label>
+            <input type="radio" required name="payment-select" value="ach" id="ach-select"
+                validationMessage="You Must Select a Payment Type" class="k-radio" />
+            <label for="ach-select">&nbsp;Bank Account (ACH)</label>
         </div>
     </div>
     <hr>
@@ -71,28 +71,27 @@
         <div>
             <label for="ccNumber">Credit Card Number</label><br />
             <span style="font-size:.8em;">(Visa & Mastercard only)</span><br />
-            <input type="text" required="required" data-role='maskedtextbox' data-mask="0000 0000 0000 0000"
-                name="ccNumber" id="vlp-bill-CardNumber" autocomplete="cc-number"
+            <input required name="ccNumber" id="vlp-bill-CardNumber" autocomplete="cc-number"
                 data-validmask-msg="Credit Card Number is incomplete"
-                validationMessage="Credit Card Number is Required">
+                validationMessage="Credit Card Number is Required" class="creditcard-number">
             <span data-for='ccNumber' class='k-invalid-msg'></span>
         </div>
         <div class="three-column">
             <div>
                 <label for="ccExpMonth">Expiration Month</label><br />
-                <input type="text" required="required" class="k-textbox" placeholder="01" pattern="^[0-9]{2}$"
+                <input required class="k-textbox" placeholder="01" pattern="^[0-9]{2}$"
                     minlength="2" maxlength="2" name="ccExpMonth" id="vlp-bill-ExpirationMonth"
                     autocomplete="cc-exp-month" validationMessage="Expiration Month is Required">
             </div>
             <div>
                 <label for="ccExpYear">Expiration Year</label><br />
-                <input type="text" required="required" class="k-textbox" placeholder="2022" pattern="\d{4}"
+                <input required class="k-textbox" placeholder="2022" pattern="\d{4}"
                     minlength="4" maxlength="4" name="ccExpYear" id="vlp-bill-ExpirationYear" autocomplete="cc-exp-year"
                     validationMessage="Expiration Year is Required"><br />
             </div>
             <div>
                 <label for="ccCSV">Code</label><br />
-                <input type="text" required="required" class="k-textbox" placeholder="123" pattern="\d{3}|\d{4}"
+                <input required class="k-textbox" placeholder="123" pattern="\d{3}|\d{4}"
                     name="ccCSV" id="vlp-bill-CardCode" autocomplete="cc-csc"
                     validationMessage="Security Code is Required">
             </div>
@@ -110,11 +109,13 @@
                     type="textbox" required id="vlp-bill-NameOnAccount" name="NameOnAccount" />
             </div>
             <div>
-                <label>Account Type</label><br/>
+                <label>Account Type</label><br />
                 <span class="k-invalid-msg" data-for="AccountType"></span>
-                <input type="radio" required id="vlp-bill-Checking" name="AccountType" value="checking" validationMessage="Account Type is Required" class="k-radio" />
-                <label class="k-radio-label" for="vlp-bill-Checking">Checking</label><br/>
-                <input type="radio" required id="vlp-bill-Savings" name="AccountType" value="savings" class="k-radio"  />
+                <input type="radio" required id="vlp-bill-Checking" name="AccountType" value="checking"
+                    class="k-radio" validationMessage="Please Select a Payment Method" />
+                <label class="k-radio-label" for="vlp-bill-Checking">Checking</label><br />
+                <input type="radio" required id="vlp-bill-Savings" name="AccountType" value="savings"
+                    class="k-radio" validationMessage="Please Select a Payment Method" />
                 <label class="k-radio-label" for="vlp-bill-Savings">Savings</label>
             </div>
             <div>
