confirmation and past pages

--- a/wp-content/plugins/ghes-vlp/views/templates/monthly-cancel-message.html
+++ b/wp-content/plugins/ghes-vlp/views/templates/monthly-cancel-message.html
@@ -1,5 +1,3 @@
-<h2>Monthly - Are you sure you want to cancel your subscription?</h2>
-<p>
-    If you cancel your subscription now, the current month (if paid) will not be reunded. You will keep your access until the end of this month's billing period.
-</p>
-<button class="confirm" onClick="cancelSubscription()">Yes</button><button class="cancel" onClick="closeCancelDialog()">Cancel</button>
+<p>Are you sure you want to cancel your subscription?</p>
+<button class="confirm" onClick="cancelSubscription()">Yes</button><button class="cancel"
+    onClick="closeCancelDialog()">Cancel</button>
