--- a/wp-content/plugins/ghes-vlp/views/templates/yearly-cancel-message.html
+++ b/wp-content/plugins/ghes-vlp/views/templates/yearly-cancel-message.html
@@ -1,5 +1,3 @@
-<h2>Yearly - Are you sure you want to cancel your subscription?</h2>
-<p>
-    You will recieve a pro-rated refund based on how many days are remaining in the year you have already paid. 
-</p>
-<button class="confirm" onClick="cancelSubscription()">Yes</button><button class="cancel" onClick="closeCancelDialog()">Cancel</button>
+<p>Are you sure you want to cancel your subscription?</p>
+<button class="confirm" onClick="cancelSubscription()">Yes</button><button class="cancel"
+    onClick="closeCancelDialog()">Cancel</button>
