--- a/wp-content/plugins/ghes-vlp/views/templates/purchase-billing.html
+++ b/wp-content/plugins/ghes-vlp/views/templates/purchase-billing.html
@@ -132,5 +132,5 @@
     </div>
 
     <h3 class="total-due">Total Due: $0.00</h3><br />
-    <button class="k-button" id="purchasesubscription" type="submit">Purchase</button>
+    <button class="green-btn" id="purchasesubscription" type="submit">Purchase</button>
 </form>
