--- a/wp-content/plugins/ghes-vlp/css/purchase.css
+++ b/wp-content/plugins/ghes-vlp/css/purchase.css
@@ -56,3 +56,40 @@
     color: #1fa99d;
     text-decoration: underline;
 }
+
+.green-btn {
+    font-size: 1em;
+    line-height: 1em;
+    padding: 10px 40px;
+    border-radius: 20px;
+    color: white;
+    background-color: #1fa99d;
+    border-width: 3px;
+    border-color: #1fa99d;
+    font-family: "Open Sans", sans-serif !important;
+    font-weight: 600;
+    border-style: solid;
+    box-shadow: 1px 1px 3px 0px rgba(121, 118, 118, 0.75);
+}
+.green-btn:hover {
+    color: #1fa99d;
+    background-color: white;
+}
+.cancel-btn {
+    font-size: .8em;
+    line-height: .8em;
+    padding: 2px 10px;
+    border-radius: 20px;
+    color: #1fa99d;
+    background-color: white;
+    border-width: 3px;
+    border-color: #1fa99d;
+    font-family: "Open Sans", sans-serif !important;
+    font-weight: 600;
+    border-style: solid;
+    box-shadow: 1px 1px 3px 0px rgba(121, 118, 118, 0.75);
+}
+.cancel-btn:hover {
+    color: white;
+    background-color: #1fa99d;
+}
