--- a/wp-content/plugins/ghes-vlp/views/templates/purchase-billing.html
+++ b/wp-content/plugins/ghes-vlp/views/templates/purchase-billing.html
@@ -79,14 +79,12 @@
         <div class="three-column">
             <div>
                 <label for="ccExpMonth">Expiration Month</label><br />
-                <input required class="k-textbox" placeholder="01" pattern="^[0-9]{2}$"
-                    minlength="2" maxlength="2" name="ccExpMonth" id="vlp-bill-ExpirationMonth"
+                <input required class="" placeholder="01" name="ccExpMonth" id="vlp-bill-ExpirationMonth"
                     autocomplete="cc-exp-month" validationMessage="Expiration Month is Required">
             </div>
             <div>
                 <label for="ccExpYear">Expiration Year</label><br />
-                <input required class="k-textbox" placeholder="2022" pattern="\d{4}"
-                    minlength="4" maxlength="4" name="ccExpYear" id="vlp-bill-ExpirationYear" autocomplete="cc-exp-year"
+                <input required class="" name="ccExpYear" id="vlp-bill-ExpirationYear" autocomplete="cc-exp-year"
                     validationMessage="Expiration Year is Required"><br />
             </div>
             <div>
